<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:contentDescription="@string/background_image"
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/coffee_background"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/logo"
                android:id="@+id/logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/logo"
                android:layout_marginBottom="150dp"
                android:layout_centerInParent="true" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo" >
                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:padding="11sp"
                    android:layout_centerInParent="true" >
                    <TextView
                        android:id="@+id/contact"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:padding="5sp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/opening_hours"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/monday_9_00_19_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/tuesday_9_00_19_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/wednesday_9_00_19_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/thursday_9_00_19_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/friday_9_00_19_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/saturday_9_00_16_00"/>
                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/sunday_closed"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/media"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:text="@string/connect_with_us"/>

            <LinearLayout
                android:id="@+id/media"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="25dp">
                <ImageView
                    android:contentDescription="@string/facebook"
                    android:background="@drawable/facebook"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="20dp" />
                <ImageView
                    android:contentDescription="@string/instagram"
                    android:background="@drawable/instagram"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="20dp" />
                <ImageView
                    android:contentDescription="@string/twitter"
                    android:background="@drawable/twitter"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="20dp"/>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>